--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 										<h2>About Me</h2>
 										<p class='align-left'>
 											I'm a graduate student at <a href="http://nthu-en.web.nthu.edu.tw">National Tsing Hua University</a> supervised by <a href="http://aliensunmin.github.io/">Pro. Min Sun</a> in <a href="http://aliensunmin.github.io/lab/info.html">Vision Science Lab</a>, majoring in Electrical Engineering.</br>
-											I'm interested in Computer Vision, Natural Language Processing, Machine Learning and Reinforcement Learning. My recent research focus on visual-language understanding and natural language generation. 
+											I'm interested in Computer Vision, Natural Language Processing, Machine Learning and Reinforcement Learning. My recent research focuses on visual-language understanding and natural language generation. 
 										</p>
 									</header>
 								</div>
