--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
 											Tseng-Hung Chen, Yuan-Hong Liao, Ching-Yao Chuang, <b>Wan-Ting Hsu</b>, Jianlong Fu, Min Sun </br>
 											International Conference on Computer Vision (ICCV) 2017 </br>
 											<a href="https://tsenghungchen.github.io/show_adapt_tell/">[project page]</a>
+											<a href="https://github.com/tsenghungchen/show-adapt-and-tell">[code]</a>
+											<a href="https://tsenghungchen.github.io/show_adapt_tell/supp/show-adapt-tell-supp.pdf">[supplementary]</a>
 										</p>
 									</li>
 								</ul>
