--- a/index.html
+++ b/index.html
@@ -75,9 +75,22 @@
 								</header>
 								<ul class="features">
 									<li id="NTHU_logo">
+										<a href="images/wanting_acl2018.png" data-lightbox="paper3"><img src="images/wanting_acl2018.png" alt="" /></a>
+									</li>
+									<li id="pub_text">
+										<h3 class='align-left'><a href="https://arxiv.org/abs/1805.06266">A Unified Model for Extractive and Abstractive Summarization using Inconsistency Loss</a></h3>
+										<p class='align-left'>
+											<b>Wan-Ting Hsu</b>, Chieh-Kai Lin, Ming-Ying Lee, Kerui Min, Jing Tang, Min Sun</br>
+											Annual Meeting of the Association for Computational Linguistics (ACL) 2018 <b>Oral</b></br>
+											<a href="https://hsuwanting.github.io/unified_summ/supp/supplementary-material.pdf">[supplementary]</a>
+										</p>
+									</li>
+								</ul>
+								<ul class="features">
+									<li id="NTHU_logo">
 										<a href="images/paper2.png" data-lightbox="paper2"><img src="images/paper2.png" alt="" /></a>
 									</li>
-									<li>
+									<li id="pub_text">
 										<h3 class='align-left'><a href="https://arxiv.org/abs/1705.00930">Show, Adapt and Tell: Adversarial Training of Cross-domain Image Captioner</a></h3>
 										<p class='align-left'>
 											Tseng-Hung Chen, Yuan-Hong Liao, Ching-Yao Chuang, <b>Wan-Ting Hsu</b>, Jianlong Fu, Min Sun </br>
@@ -92,7 +105,7 @@
 									<li id="NTHU_logo">
 										<a href="images/paper1.png" data-lightbox="paper1"><img src="images/paper1.png" alt="" /></a>
 									</li>
-									<li>
+									<li id="pub_text">
 										<h3 class='align-left'><a href="https://drive.google.com/file/d/0B8EcGMvvvDXANkJvbGNPMGFMbkk/view">Video Captioning via Sentence Augmentation and Spatio-Temporal Attention</a></h3>
 										<p class='align-left'>
 											Tseng-Hung Chen, Kuo-Hao Zeng, <b>Wan-Ting Hsu</b>, Min Sun </br>
