--- a/unified_summ/index.html
+++ b/unified_summ/index.html
@@ -32,13 +32,15 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<!-- <span class="logo"><img src="images/myphoto.jpg" alt="" /></span>-->
-						<h1>A Unified Model for Extractive and Abstractive Summarization using Inconsistency Loss</h1>
-						<p>Wan-Ting Hsu, Chieh-Kai Lin, Ming-Ying Lee, Kerui Min, Jing Tang, Min Sun<br /></p>
-						<ul class="icons">
-							<li><a href="https://twitter.com/cindy_wanting" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
+						<h2>A Unified Model for Extractive and Abstractive Summarization<br /> using Inconsistency Loss</h2>
+						<p>Wan-Ting Hsu <sup>1</sup>, Chieh-Kai Lin <sup>1</sup>, Ming-Ying Lee <sup>1</sup>, Kerui Min <sup>2</sup>, Jing Tang <sup>2</sup>, Min Sun <sup>1</sup><br />
+						<sup>1</sup> National Tsing Hua University, <sup>2</sup> Cheetah Mobile<br /><br />
+						Annual Meeting of the Association for Computational Linguistics (ACL) 2018 Oral</p>
+						<ul class="logo_top">
 							<!--<li><a href="https://www.facebook.com/profile.php?id=100000701057929" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>-->
-							<li><a href="https://www.linkedin.com/in/wan-ting-hsu-50803912a" class="icon fa-linkedin alt"><span class="label">Linkedin</span></a></li>
-							<li><a href="https://github.com/HsuWanTing" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
+							
+							<li><img src="images/NTHU_small.png" alt="" / ></li>
+							<li><img src="images/cmlogo.png" alt="" / ></li>
 						</ul>
 					</header>
 
@@ -46,10 +48,11 @@
 					<div id="main">
 
 						<!-- Introduction -->
-							<section id="intro" class="main special">
+							<section id="abstract" class="main special">
 								<div class="content">
 									<header class="major">
 										<h2>Abstract</h2>
+										<img src="images/inconsistent.png" alt="" / width="100%"></br></br>
 										<p class='align-left'>
 											We propose a unified model combining the strength of extractive and abstractive summarization. On the one hand, a simple extractive model can obtain sentence-level attention with high ROUGE scores but less readable. On the other hand, a more complicated abstractive model can obtain word-level dynamic attention to generate a more readable paragraph. In our model, sentence-level attention is used to modulate the word-level attention such that words in less attended sentences are less likely to be generated. Moreover, a novel inconsistency loss function is introduced to penalize the inconsistency between two levels of attentions. By end-to-end training our model with the inconsistency loss and original losses of extractive and abstractive models, we achieve state-of-the-art ROUGE scores while being the most informative and readable summarization on the CNN/Daily Mail dataset in a solid human evaluation. 
 										</p>
@@ -58,12 +61,39 @@
 							</section>
 
 						<!-- project -->
-							<section id="publication" class="main special">
+							<section id="resource" class="main special">
 								<header class="major">
 									<h2>Resources</h2>
 								</header>
 								<img src="images/paper_thumbnail.png" alt="" / width="100%">
-								
+								<a href="https://arxiv.org/abs/1805.06266" class="button icon fa-file-pdf-o">Paper</a>
+								<a href="https://hsuwanting.github.io/unified_summ/supp/supplementary-material.pdf" class="button icon fa-file-pdf-o">Supplementary</a>
+							</section>
+
+							<section id="example" class="main special">
+								<header class="major">
+									<h2>Example</h2>
+								</header>
+								<div class="table-wrapper">
+									<table>
+
+										<tbody>
+											<tr>
+												<td>Article</td>
+												<th class="article">A chameleon balances carefully on a branch, waiting calmly for its prey... except that if you look closely, you will see that this picture is not all that it seems. For the `creature' poised to pounce is not a colourful species of lizard but something altogether more human. Featuring two carefully painted female models, it is a clever piece of sculpture designed to create an amazing illusion. It is the work of Italian artist Johannes Stoetter. Scroll down for video. Can you see us? Italian artist Johannes Stoetter has painted two naked women to look like a chameleon. The 37-year-old has previously transformed his models into frogs and parrots but this may be his most intricate and impressive piece to date. Stoetter daubed water-based body paint on the naked models to create the multicoloured effect, then intertwined them to form the shape of a chameleon. To complete the deception, the models rested on a bench painted to match their skin and held the green branch in the air beneath them. Stoetter can take weeks to plan one of his pieces and hours to paint it. Speaking about The Chameleon, he said: `I worked about four days to design the motif bigger and paint it with colours. The body painting took me about six hours with the help of an assistant. I covered the hair with natural clay to make the heads look bald.' Camouflage job: A few finishing touches are applied to the two naked models to complete the transformation. `There are different difficulties on different levels as in every work, but I think that my passion and love to my work is so big, that I figure out a way to deal with difficulties. My main inspirations are nature, my personal life-philosophy, every-day-life and people themselves.' However, the finished result existed only briefly before the models were able to get up and wash the paint off – with just a video and some photographs to record it. (...)</th>
+											</tr>
+											<tr>
+												<td>Reference Summary</td>
+												<th>Johannes Stoetter's artwork features two carefully painted female models. The 37-year-old has previously transformed models into frogs and parrots. Daubed water-based body paint on naked models to create the effect. Completing the deception, models rested on bench painted to match skin.</th>
+											</tr>
+											<tr>
+												<td>Our Summary</td>
+												<th> Johannes Stoetter has painted two naked women to look like a chameleon. The 37-year-old has previously transformed his models into frogs and parrots. Stoetter daubed water-based body paint on the naked models to create the multicoloured effect, then intertwined them to form the shape of a chameleon.</th>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+
 							</section>
 
 						<!-- First Section -->
@@ -78,24 +108,14 @@
 							<h2></h2>
 							<p></p>
 						</section>-->
-						<section>
-							<h2>Contact Me</h2>
-							<dl class="alt">
-								<dt>Email</dt>
-								<dd><a href="#">cindyemail0720@gmail.com</a></dd>
-							</dl>
-							<ul class="icons">
-								<li><a href="https://twitter.com/cindy_wanting" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<!--<li><a href="https://www.facebook.com/profile.php?id=100000701057929" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>-->
-								<li><a href="https://www.linkedin.com/in/wan-ting-hsu-50803912a" class="icon fa-linkedin alt"><span class="label">Linkedin</span></a></li>
-								<!--<li><a href="#" class="icon fa-instagram alt"><span class="label">Instagram</span></a></li>-->
-								<li><a href="https://github.com/HsuWanTing" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
-								<!--<li><a href="#" class="icon fa-dribbble alt"><span class="label">Dribbble</span></a></li>-->
-							</ul>
-						</section>
+
+						<p class="contact">
+							<b>Contact:</b> <a href="https://hsuwanting.github.io/">Wan-Ting Hsu</a></br>
+						</p>
+
 						<p class="copyright">
 							&copy; Wan-Ting Hsu. Designed by <a href="https://html5up.net">HTML5 UP</a>. Hosted on <a href="https://pages.github.com/">Github Page.</a></br>
-							Last Updated: 24 July 2017
+							Last Updated: 19 May 2018
 						</p>
 					</footer>
 
