--- a/unified_summ/index.html
+++ b/unified_summ/index.html
@@ -33,16 +33,27 @@
 					<header id="header" class="alt">
 						<!-- <span class="logo"><img src="images/myphoto.jpg" alt="" /></span>-->
 						<h2>A Unified Model for Extractive and Abstractive Summarization<br /> using Inconsistency Loss</h2>
-						<p>Wan-Ting Hsu <sup>1</sup>, Chieh-Kai Lin <sup>1</sup>, Ming-Ying Lee <sup>1</sup>, Kerui Min <sup>2</sup>, Jing Tang <sup>2</sup>, Min Sun <sup>1</sup><br />
+						<p>
+							<a href="https://hsuwanting.github.io/">Wan-Ting Hsu</a> <sup>1</sup>, Chieh-Kai Lin <sup>1</sup>, Ming-Ying Lee <sup>1</sup>, Kerui Min <sup>2</sup>, Jing Tang <sup>2</sup>, Min Sun <sup>1</sup><br />
 						<sup>1</sup> National Tsing Hua University, <sup>2</sup> Cheetah Mobile<br /><br />
-						Annual Meeting of the Association for Computational Linguistics (ACL) 2018 Oral</p>
+						Annual Meeting of the Association for Computational Linguistics (ACL) 2018 Oral
+						</p>
 						<ul class="logo_top">
-							<!--<li><a href="https://www.facebook.com/profile.php?id=100000701057929" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>-->
-							
-							<li><img src="images/NTHU_small.png" alt="" / ></li>
-							<li><img src="images/cmlogo.png" alt="" / ></li>
+							<li class="short_logo"><a href="http://www.nthu.edu.tw/"><img src="images/NTHU_small.png" alt="" / ></a></li>
+							<li class="long_logo"><a href="http://www.cmcm.com/zh-tw/"><img src="images/cmlogo.png" alt="" / ></a></li>
 						</ul>
 					</header>
+
+				<!-- Nav -->
+					<nav id="nav">
+						<ul>
+							<li><a href="#abstract" class="active">Abstract</a></li>
+							<li><a href="#resource">Resources</a></li>
+							<li><a href="#example">Example</a></li>
+							<li><a href="#acknowledge">Acknowledgement</a></li>
+						</ul>
+					</nav>
+
 
 				<!-- Main -->
 					<div id="main">
@@ -66,6 +77,7 @@
 									<h2>Resources</h2>
 								</header>
 								<img src="images/paper_thumbnail.png" alt="" / width="100%">
+								<a href="" class="button icon fa-github">Code (coming soon)</a>
 								<a href="https://arxiv.org/abs/1805.06266" class="button icon fa-file-pdf-o">Paper</a>
 								<a href="https://hsuwanting.github.io/unified_summ/supp/supplementary-material.pdf" class="button icon fa-file-pdf-o">Supplementary</a>
 							</section>
@@ -94,6 +106,18 @@
 									</table>
 								</div>
 
+							</section>
+
+							<section id="acknowledge" class="main special">
+								<header class="major">
+									<h2>Acknowledgement</h2>
+								</header>
+
+								<ul class="logo_top">
+									<li class="long_logo"><a href="http://www.cmcm.com/zh-tw/"><img src="images/cmlogo.png" alt="" / ></a></li>
+									<li class="short_logo"><a href="http://www.ntu.edu.tw/"><img src="images/ntu_logo.png" alt="" / ></a></li>
+									<li class="long_logo"><a href="https://www.most.gov.tw/"><img src="images/most_logo.png" alt="" / ></a></li>
+								</ul>
 							</section>
 
 						<!-- First Section -->
