add project button to my website

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 										<p class='align-left'>
 											<b>Wan-Ting Hsu</b>, Chieh-Kai Lin, Ming-Ying Lee, Kerui Min, Jing Tang, Min Sun</br>
 											Annual Meeting of the Association for Computational Linguistics (ACL) 2018 <b>Oral</b></br>
-											<a href="https://hsuwanting.github.io/unified_summ/supp/supplementary-material.pdf">[supplementary]</a>
+											<a href="https://hsuwanting.github.io/unified_summ/supp/supplementary-material.pdf" class="button small icon fa-file-pdf-o">Supplementary</a>
 										</p>
 									</li>
 								</ul>
@@ -95,9 +95,9 @@
 										<p class='align-left'>
 											Tseng-Hung Chen, Yuan-Hong Liao, Ching-Yao Chuang, <b>Wan-Ting Hsu</b>, Jianlong Fu, Min Sun </br>
 											International Conference on Computer Vision (ICCV) 2017 </br>
-											<a href="https://tsenghungchen.github.io/show_adapt_tell/">[project page]</a>
-											<a href="https://github.com/tsenghungchen/show-adapt-and-tell">[code]</a>
-											<a href="https://tsenghungchen.github.io/show_adapt_tell/supp/show-adapt-tell-supp.pdf">[supplementary]</a>
+											<a href="https://tsenghungchen.github.io/show_adapt_tell/" class="button small icon fa-globe">Project</a>
+											<a href="https://github.com/tsenghungchen/show-adapt-and-tell" class="button small icon fa-github">Code</a>
+											<a href="https://tsenghungchen.github.io/show_adapt_tell/supp/show-adapt-tell-supp.pdf" class="button small icon fa-file-pdf-o">Supplementary</a>
 										</p>
 									</li>
 								</ul>
