--- a/unified_summ/index.html
+++ b/unified_summ/index.html
@@ -80,6 +80,7 @@
 								<a href="" class="button icon fa-github">Code (coming soon)</a>
 								<a href="https://arxiv.org/abs/1805.06266" class="button icon fa-file-pdf-o">Paper</a>
 								<a href="https://hsuwanting.github.io/unified_summ/supp/supplementary-material.pdf" class="button icon fa-file-pdf-o">Supplementary</a>
+								<a href="https://hsuwanting.github.io/unified_summ/unified_test_output.zip" class="button icon fa-file-archive-o">Test set outputs</a>
 							</section>
 
 							<section id="example" class="main special">
@@ -139,7 +140,7 @@
 
 						<p class="copyright">
 							&copy; Wan-Ting Hsu. Designed by <a href="https://html5up.net">HTML5 UP</a>. Hosted on <a href="https://pages.github.com/">Github Page.</a></br>
-							Last Updated: 19 May 2018
+							Last Updated: 21 May 2018
 						</p>
 					</footer>
 
