--- a/unified_summ/index.html
+++ b/unified_summ/index.html
@@ -34,7 +34,7 @@
 						<!-- <span class="logo"><img src="images/myphoto.jpg" alt="" /></span>-->
 						<h2>A Unified Model for Extractive and Abstractive Summarization<br /> using Inconsistency Loss</h2>
 						<p>
-							<a href="https://hsuwanting.github.io/">Wan-Ting Hsu</a> <sup>1</sup>, Chieh-Kai Lin <sup>1</sup>, Ming-Ying Lee <sup>1</sup>, Kerui Min <sup>2</sup>, Jing Tang <sup>2</sup>, Min Sun <sup>1</sup><br />
+							<a href="https://hsuwanting.github.io/">Wan-Ting Hsu</a> <sup>1</sup>, Chieh-Kai Lin <sup>1</sup>, Ming-Ying Lee <sup>1</sup>, Kerui Min <sup>2</sup>, Jing Tang <sup>2</sup>, <a href="http://aliensunmin.github.io/">Min Sun</a> <sup>1</sup><br />
 						<sup>1</sup> National Tsing Hua University, <sup>2</sup> Cheetah Mobile<br /><br />
 						Annual Meeting of the Association for Computational Linguistics (ACL) 2018 Oral
 						</p>
