--- a/unified_summ/index.html
+++ b/unified_summ/index.html
@@ -106,7 +106,7 @@
 										</tbody>
 									</table>
 								</div>
-								More examples can be found in the <a href="https://hsuwanting.github.io/unified_summ/supp/supplementary-material.pdf">supplementary material</a>.
+								More examples can be found in the <a href="https://hsuwanting.github.io/unified_summ/supp/supplementary-material.pdf">supplementary material</a> and <a href="https://hsuwanting.github.io/unified_summ/unified_test_output.zip">our test set outputs</a>.
 
 							</section>
 
