--- a/unified_summ/index.html
+++ b/unified_summ/index.html
@@ -77,6 +77,12 @@
 									<h2>Resources</h2>
 								</header>
 								<img src="images/paper_thumbnail.png" alt="" / width="100%">
+								<pre><code>@InProceedings{hsu2018unified,
+  title={A Unified Model for Extractive and Abstractive Summarization using Inconsistency Loss},
+  author={Hsu, Wan-Ting and Lin, Chieh-Kai and Lee, Ming-Ying and Min, Kerui and Tang, Jing and Sun, Min},
+  booktitle = {Proceedings of the 56th Annual Meeting of the Association for Computational Linguistics},
+  year={2018}
+}</code></pre>
 								<a href="" class="button icon fa-github">Code (coming soon)</a>
 								<a href="https://arxiv.org/abs/1805.06266" class="button icon fa-file-pdf-o">Paper</a>
 								<a href="https://hsuwanting.github.io/unified_summ/supp/supplementary-material.pdf" class="button icon fa-file-pdf-o">Supplementary</a>
@@ -87,13 +93,14 @@
 								<header class="major">
 									<h2>Example</h2>
 								</header>
+								<p>We highlight words where the reference summary focuses on in bold fonts. Our generated summary matches well with the reference summary.</p>
 								<div class="table-wrapper">
 									<table>
 
 										<tbody>
 											<tr>
-												<td>Article</td>
-												<th class="article">A chameleon balances carefully on a branch, waiting calmly for its prey... except that if you look closely, you will see that this picture is not all that it seems. For the `creature' poised to pounce is not a colourful species of lizard but something altogether more human. Featuring two carefully painted female models, it is a clever piece of sculpture designed to create an amazing illusion. It is the work of Italian artist Johannes Stoetter. Scroll down for video. Can you see us? Italian artist Johannes Stoetter has painted two naked women to look like a chameleon. The 37-year-old has previously transformed his models into frogs and parrots but this may be his most intricate and impressive piece to date. Stoetter daubed water-based body paint on the naked models to create the multicoloured effect, then intertwined them to form the shape of a chameleon. To complete the deception, the models rested on a bench painted to match their skin and held the green branch in the air beneath them. Stoetter can take weeks to plan one of his pieces and hours to paint it. Speaking about The Chameleon, he said: `I worked about four days to design the motif bigger and paint it with colours. The body painting took me about six hours with the help of an assistant. I covered the hair with natural clay to make the heads look bald.' Camouflage job: A few finishing touches are applied to the two naked models to complete the transformation. `There are different difficulties on different levels as in every work, but I think that my passion and love to my work is so big, that I figure out a way to deal with difficulties. My main inspirations are nature, my personal life-philosophy, every-day-life and people themselves.' However, the finished result existed only briefly before the models were able to get up and wash the paint off – with just a video and some photographs to record it. (...)</th>
+												<td>Article (original <a href="http://www.dailymail.co.uk/news/article-3037607/Chameleon-No-s-body-double-Artist-uses-two-models-daubed-multi-coloured-paint-create-incredible-illusion.html">link</a>)</td>
+												<th class="article">A chameleon balances carefully on a branch, waiting calmly for its prey... except that if you look closely, you will see that this picture is not all that it seems. For the 'creature' poised to pounce is not a colourful species of lizard but something altogether more human. <b>Featuring two carefully painted female models</b>, it is a clever piece of sculpture designed to create an amazing illusion. It is the work of Italian artist Johannes Stoetter. Scroll down for video. Can you see us? Italian artist Johannes Stoetter has painted two naked women to look like a chameleon. <b>The 37-year-old has previously transformed his models into frogs and parrots</b> but this may be his most intricate and impressive piece to date. Stoetter <b>daubed water-based body paint on the naked models to create the</b> multicoloured <b>effect</b>, then intertwined them to form the shape of a chameleon. To <b>complete the deception, the models rested on a bench painted to match their skin</b> and held the green branch in the air beneath them. Stoetter can take weeks to plan one of his pieces and hours to paint it. Speaking about The Chameleon, he said: 'I worked about four days to design the motif bigger and paint it with colours. The body painting took me about six hours with the help of an assistant. I covered the hair with natural clay to make the heads look bald.' Camouflage job: A few finishing touches are applied to the two naked models to complete the transformation. 'There are different difficulties on different levels as in every work, but I think that my passion and love to my work is so big, that I figure out a way to deal with difficulties. My main inspirations are nature, my personal life-philosophy, every-day-life and people themselves.' However, the finished result existed only briefly before the models were able to get up and wash the paint off – with just a video and some photographs to record it. (...)</th>
 											</tr>
 											<tr>
 												<td>Reference Summary</td>
@@ -106,7 +113,7 @@
 										</tbody>
 									</table>
 								</div>
-								More examples can be found in the <a href="https://hsuwanting.github.io/unified_summ/supp/supplementary-material.pdf">supplementary material</a> and <a href="https://hsuwanting.github.io/unified_summ/unified_test_output.zip">our test set outputs</a>.
+								<p>More examples can be found in the <a href="https://hsuwanting.github.io/unified_summ/supp/supplementary-material.pdf">supplementary material</a> and <a href="https://hsuwanting.github.io/unified_summ/unified_test_output.zip">our test set outputs</a>.</p>
 
 							</section>
 
