add acl 2018 project page

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 						<ul>
 							<li><a href="#intro" class="active">About Me</a></li>
 							<li><a href="#publication">Publication</a></li>
-							<li><a href="#first">Education</a></li>
-							<li><a href="#second">Work Experience</a></li>
+							<li><a href="#education">Education</a></li>
+							<li><a href="#work">Work Experience</a></li>
 						</ul>
 					</nav>
 
@@ -82,6 +82,7 @@
 										<p class='align-left'>
 											<b>Wan-Ting Hsu</b>, Chieh-Kai Lin, Ming-Ying Lee, Kerui Min, Jing Tang, Min Sun</br>
 											Annual Meeting of the Association for Computational Linguistics (ACL) 2018 <b>Oral</b></br>
+											<a href="https://hsuwanting.github.io/unified_summ/" class="button special small icon fa-globe">Project</a>
 											<a href="https://hsuwanting.github.io/unified_summ/supp/supplementary-material.pdf" class="button special small icon fa-file-pdf-o">Supplementary</a>
 											<a href="https://hsuwanting.github.io/unified_summ/unified_test_output.zip" class="button special small icon fa-file-archive-o">Test set outputs</a>
 										</p>
@@ -117,7 +118,7 @@
 							</section>
 
 						<!-- First Section -->
-							<section id="first" class="main special">
+							<section id="education" class="main special">
 								<header class="major">
 									<h2>Education</h2>
 								</header>
@@ -135,7 +136,7 @@
 							</section>
 
 						<!-- Second Section -->
-							<section id="second" class="main special">
+							<section id="work" class="main special">
 								<header class="major">
 									<h2>Work Experience</h2>
 								</header>
