--- a/index.html
+++ b/index.html
@@ -142,9 +142,18 @@
 								</header>
 								<ul class="features">
 									<li id="NTHU_logo">
+										<img src="images/microsoft_logo.png" alt="" />
+									</li>
+									<li id="work_text">
+										<h3 class='align-left'>Full-time Intern in <a href="https://www.msra.cn/">Microsoft Reseach Aisa</a>, Beijing, China</h3>
+										<p class='align-left'>Apr. 2018 - Jul. 2018</p>
+									</li>
+								</ul>
+								<ul class="features">
+									<li id="NTHU_logo">
 										<img src="images/IMEC_small.png" alt="" />
 									</li>
-									<li>
+									<li id="work_text">
 										<h3 class='align-left'>Part-time Intern in <a href="http://www.imec-int.com/en/home">IMEC Taiwan</a>, Hsinchu, Taiwan</h3>
 										<p class='align-left'>Sep. 2015 - Jan. 2016</p>
 									</li>
