update acl 2018 code link

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 											<b>Wan-Ting Hsu</b>, Chieh-Kai Lin, Ming-Ying Lee, Kerui Min, Jing Tang, Min Sun</br>
 											Annual Meeting of the Association for Computational Linguistics (ACL) 2018 <b>Oral</b></br>
 											<a href="https://hsuwanting.github.io/unified_summ/" class="button special small icon fa-globe">Project</a>
+											<a href="https://github.com/HsuWanTing/unified-summarization" class="button special small icon fa-github">Code</a>
 											<a href="https://hsuwanting.github.io/unified_summ/supp/supplementary-material.pdf" class="button special small icon fa-file-pdf-o">Supplementary</a>
 											<a href="https://hsuwanting.github.io/unified_summ/unified_test_output.zip" class="button special small icon fa-file-archive-o">Test set outputs</a>
 										</p>
