--- a/unified_summ/index.html
+++ b/unified_summ/index.html
@@ -83,7 +83,7 @@
   booktitle={Proceedings of the 56th Annual Meeting of the Association for Computational Linguistics},
   year={2018}
 }</code></pre>
-								<a href="" class="button icon fa-github">Code (coming soon)</a>
+								<a href="https://github.com/HsuWanTing/unified-summarization" class="button icon fa-github">Code (coming soon)</a>
 								<a href="https://arxiv.org/abs/1805.06266" class="button icon fa-file-pdf-o">Paper</a>
 								<a href="https://hsuwanting.github.io/unified_summ/supp/supplementary-material.pdf" class="button icon fa-file-pdf-o">Supplementary</a>
 								<a href="https://hsuwanting.github.io/unified_summ/unified_test_output.zip" class="button icon fa-file-archive-o">Test set outputs</a>
