--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 										<img src="images/microsoft_logo.png" alt="" />
 									</li>
 									<li id="work_text">
-										<h3 class='align-left'>Full-time Intern in <a href="https://www.msra.cn/">Microsoft Reseach Aisa</a>, Beijing, China</h3>
+										<h3 class='align-left'>Full-time Intern in <a href="https://www.msra.cn/">Microsoft Research Asia</a>, Beijing, China</h3>
 										<p class='align-left'>Apr. 2018 - Jul. 2018</p>
 									</li>
 								</ul>
