--- a/unified_summ/index.html
+++ b/unified_summ/index.html
@@ -80,7 +80,7 @@
 								<pre><code>@InProceedings{hsu2018unified,
   title={A Unified Model for Extractive and Abstractive Summarization using Inconsistency Loss},
   author={Hsu, Wan-Ting and Lin, Chieh-Kai and Lee, Ming-Ying and Min, Kerui and Tang, Jing and Sun, Min},
-  booktitle={Proceedings of the 56th Annual Meeting of the Association for Computational Linguistics},
+  booktitle={Proceedings of the 56th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
   year={2018}
 }</code></pre>
 								<a href="https://github.com/HsuWanTing/unified-summarization" class="button icon fa-github">Code</a>
