--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/myphoto.jpg" alt="" /></span>
+						<span class="logo"><img src="images/myphoto2.jpg" alt="" /></span>
 						<h1>Wan-Ting Hsu</h1>
 						<p>cindyemail0720@gmail.com<br /></p>
 						<ul class="icons">
@@ -73,6 +73,20 @@
 								<header class="major">
 									<h2>Publication</h2>
 								</header>
+								<ul class="features">
+									<li id="NTHU_logo">
+										<a href="images/poyu_eccv2018.png" data-lightbox="paper4"><img src="images/poyu_eccv2018.png" alt="" /></a>
+									</li>
+									<li id="pub_text">
+										<h3 class='align-left'><a href="https://arxiv.org/abs/1807.11037">Efficient Uncertainty Estimation for Semantic Segmentation in Videos</a></h3>
+										<p class='align-left'>
+											Po-Yu Huang, <b>Wan-Ting Hsu</b>, Chun-Yueh Chiu, Ting-Fan Wu, Min Sun</br>
+											European Conference on Computer Vision (ECCV) 2018 </br>
+											<a href="https://andyhahaha.github.io/segmentation_uncertainty/" class="button special small icon fa-globe">Project</a>
+											<a href="https://github.com/andyhahaha/Efficient-Uncertainty-Video-Segmentation" class="button special small icon fa-github">Code</a>
+										</p>
+									</li>
+								</ul>
 								<ul class="features">
 									<li id="NTHU_logo">
 										<a href="images/wanting_acl2018.png" data-lightbox="paper3"><img src="images/wanting_acl2018.png" alt="" /></a>
@@ -129,7 +143,7 @@
 									</li>
 									<li>
 										<h3 class='align-left'>M.S. in EE, <a href="http://nthu-en.web.nthu.edu.tw">National Tsing Hua University</a>, Hsinchu, Taiwan</h3>
-										<p class='align-left'>Sep. 2016 - present</p>
+										<p class='align-left'>Sep. 2016 - Jul. 2018</p>
 										<h3 class='align-left'>B.S. in EE, <a href="http://nthu-en.web.nthu.edu.tw">National Tsing Hua University</a>, Hsinchu, Taiwan</h3>
 										<p class='align-left'>Sep. 2012 - Jun. 2016</p>
 									</li>
@@ -186,7 +200,7 @@
 						</section>
 						<p class="copyright">
 							&copy; Wan-Ting Hsu. Designed by <a href="https://html5up.net">HTML5 UP</a>. Hosted on <a href="https://pages.github.com/">Github Page.</a></br>
-							Last Updated: 21 May 2018
+							Last Updated: 20 September 2018
 						</p>
 					</footer>
 
