--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
 											<a href="https://hsuwanting.github.io/unified_summ/" class="button special small icon fa-globe">Project</a>
 											<a href="https://github.com/HsuWanTing/unified-summarization" class="button special small icon fa-github">Code</a>
 											<a href="https://hsuwanting.github.io/unified_summ/supp/supplementary-material.pdf" class="button special small icon fa-file-pdf-o">Supplementary</a>
-											<a href="https://hsuwanting.github.io/unified_summ/unified_test_output.zip" class="button special small icon fa-file-archive-o">Test set outputs</a>
+											<a href="https://hsuwanting.github.io/unified_summ/ACL_presentation.pptx" class="button special small icon fa-file-powerpoint-o">Slides</a>
+											<a href="https://drive.google.com/open?id=1YtETyTrV_Lv7tz4cxLCugqt5ad7hV8G3" class="button special small icon fa-file-archive-o">Test set outputs</a>
 										</p>
 									</li>
 								</ul>
