--- a/unified_summ/index.html
+++ b/unified_summ/index.html
@@ -87,7 +87,7 @@
 								<a href="https://arxiv.org/abs/1805.06266" class="button icon fa-file-pdf-o">Paper</a>
 								<a href="https://hsuwanting.github.io/unified_summ/supp/supplementary-material.pdf" class="button icon fa-file-pdf-o">Supplementary</a>
 								<a href="https://hsuwanting.github.io/unified_summ/ACL_presentation.pptx" class="button icon fa-file-powerpoint-o">Slides</a>
-								<a href="https://hsuwanting.github.io/unified_summ/unified_test_output.zip" class="button icon fa-file-archive-o">Test set outputs</a>
+								<a href="https://drive.google.com/open?id=1YtETyTrV_Lv7tz4cxLCugqt5ad7hV8G3" class="button icon fa-file-archive-o">Test set outputs</a>
 							</section>
 
 							<section id="example" class="main special">
